--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -15,7 +15,9 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 
-
+    <!-- #region Radzen -->
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <!-- #endregion -->
     <!-- #region Blazorstrap-->
     <link href="YourAssemblyName.styles.css" rel="stylesheet">
     <link href="path_to_bootstrap.min.css" rel="stylesheet" integrity="if_needed" />"
@@ -47,12 +49,13 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
+    <!-- #region Radzen -->
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <!-- #endregion -->
     <!-- #region blazorstrap -->
     <script src="_content/BlazorStrap/popper.min.js"></script>
     <script src="_content/BlazorStrap/blazorstrap.js"></script>
     <!-- #endregion -->
-
-
     <!-- #region Blazorise -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
